# lambda-0b10

./: Cargo.toml  Makefile  README.md
algebra/: Cargo.toml
algebra/src/: lib.rs
algebra/src/fields/: fp17.rs  mod.rs
algebra/src/polynomials/: mod.rs  reed_solomon.rs
challenges/chal2/: Cargo.toml  README.md
challenges/chal2/src/: main.rs
challenges/interview/: Cargo.toml
challenges/interview/src/: main.rs
cryptosystems/: Cargo.toml
docs/: INTERVIEW.md  PROGRAM.md  WEEK-1.md  WEEK-2.md  WEEK-3.md  WEEK-4.md  WEEK-5.md  WEEK-6.md  WEEK-7.md  WEEK-8.md
examples/: chal_bls12_381.rs  chal_goldilocks.rs
exercises/interview/: Cargo.toml  README.md
exercises/interview/src/: lib.rs
exercises/ntt/: Cargo.toml  README.md
exercises/ntt/src/: lib.rs  main.rs  ntt.rs
exercises/reed-solomon/: Cargo.toml
exercises/rsa/: Cargo.toml
exercises/rsa/src/: lib.rs
exercises/shamir-secret-share/: Cargo.toml  README.md
exercises/shamir-secret-share/src/: lib.rs
exercises/sumcheck/: Cargo.toml  README.md
exercises/sumcheck/examples/: adjacency_matrix.csv  graph_triangles.rs
exercises/sumcheck/src/: lib.rs  main.rs  sumcheck.rs  utils.rs
exercises/vault-of-loki/: Cargo.toml  README.md
snarks/: Cargo.toml
snarks/babysnark/: Cargo.toml  README.md
snarks/babysnark/src/: lib.rs  main.rs
snarks/plonk/: Cargo.toml
snarks/src/: babysnark.rs  lib.rs
snarks/stark101/: Cargo.toml  README.md  proof.json
snarks/stark101/src/: field.rs  fri.rs  lib.rs  main.rs  polynomial.rs  program.rs  proof.rs
src/: bls12_381.rs  goldilocks.rs  lib.rs  main.rs
src/challenges/: mod.rs
src/challenges/chal2/: README.md  mod.rs
src/cryptosystems/: rsa.rs
src/fields/: fp17.rs  mod.rs
src/polynomials/: mod.rs  reed_solomon.rs
src/snarks/: babysnark.rs
