[workspace]
resolver = "2"
members = [
    "challenges/chal2",
    "challenges/interview",
    "exercises/rsa",
    "exercises/reed-solomon",
    "snarks/babysnark",
    "snarks/stark101",
    "snarks/plonk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
lambdaworks-crypto = "0.7.0"
lambdaworks-math = "0.7.0"

log = "*"
env_logger = "*"
hex = "*"
rand = "0.8.5"
rand_chacha = "0.3.1"
