[package]
name = "sumcheck"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambdaworks-math.workspace = true
lambdaworks-crypto.workspace = true
rand.workspace = true
log.workspace = true
env_logger.workspace = true
csv = "1.1"
